--- a/index.html
+++ b/index.html
@@ -249,57 +249,57 @@
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 12, name: 'Suribabu Kodi Pulao'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="special-combo" data-name="Non-Veg Special Combo">
-        <img src="../images/special combo.jpg" alt="Non-Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/special combo.jpg" alt="Non-Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Non-Veg Special Combo</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 11, name: 'Non-Veg Special Combo'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="special-combo" data-name="Kodi Pulao Combo">
-        <img src="../images/kodi palav.jpg" alt="Kodi Pulao Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/kodi palav.jpg" alt="Kodi Pulao Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Kodi Pulao Combo</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 9, name: 'Kodi Pulao Combo'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="special-combo" data-name="Veg Special Combo">
-        <img src="../images/veg pala0.webp" alt="Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/veg pala0.webp" alt="Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Veg Special Combo</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 10, name: 'Veg Special Combo'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="starters" data-name="Paneer Tikka">
-        <img src="../images/paneer tikka.jpg" alt="Paneer Tikka" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/paneer tikka.jpg" alt="Paneer Tikka" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Paneer Tikka</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 1, name: 'Paneer Tikka'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="starters" data-name="Chicken 65">
-        <img src="../images/chc 65.jpg" alt="Chicken 65" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/chc 65.jpg" alt="Chicken 65" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Chicken 65</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 2, name: 'Chicken 65'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="starters" data-name="Veg Manchurian">
-        <img src="../images/veg manchuriya.jpeg" alt="Veg Manchurian" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/veg manchuriya.jpeg" alt="Veg Manchurian" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Veg Manchurian</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 3, name: 'Veg Manchurian'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="badam-milk" data-name="Classic Badam Milk">
-        <img src="../images/badam cls.jpg" alt="Classic Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/badam cls.jpg" alt="Classic Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Classic Badam Milk</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 4, name: 'Classic Badam Milk'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="badam-milk" data-name="Kesar Badam Milk">
-        <img src="../images/kesar bm.jpeg" alt="Kesar Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/kesar bm.jpeg" alt="Kesar Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Kesar Badam Milk</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 5, name: 'Kesar Badam Milk'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="snacks" data-name="Samosa">
-        <img src="../images/samosa.jpeg" alt="Samosa" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/samosa.jpeg" alt="Samosa" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Samosa</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 6, name: 'Samosa'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="snacks" data-name="Mirchi Bajji">
-        <img src="../images/bujji-mirchi.jpg" alt="Mirchi Bajji" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/bujji-mirchi.jpg" alt="Mirchi Bajji" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Mirchi Bajji</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 7, name: 'Mirchi Bajji'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="snacks" data-name="Onion Pakoda">
-        <img src="../images/Onion-Pakoda.jpg" alt="Onion Pakoda" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="images/Onion-Pakoda.jpg" alt="Onion Pakoda" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Onion Pakoda</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 8, name: 'Onion Pakoda'}); selectCard(this)">Add to Cart</button>
       </div>
