--- a/index.html
+++ b/index.html
@@ -279,27 +279,27 @@
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 3, name: 'Veg Manchurian'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="badam-milk" data-name="Classic Badam Milk">
-        <img src="images/badam cls.jpg" alt="Classic Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="badam cls.jpg" alt="Classic Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Classic Badam Milk</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 4, name: 'Classic Badam Milk'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="badam-milk" data-name="Kesar Badam Milk">
-        <img src="images/kesar bm.jpeg" alt="Kesar Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="kesar bm.jpeg" alt="Kesar Badam Milk" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Kesar Badam Milk</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 5, name: 'Kesar Badam Milk'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="snacks" data-name="Samosa">
-        <img src="images/samosa.jpeg" alt="Samosa" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="samosa.jpeg" alt="Samosa" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Samosa</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 6, name: 'Samosa'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="snacks" data-name="Mirchi Bajji">
-        <img src="images/bujji-mirchi.jpg" alt="Mirchi Bajji" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="bujji-mirchi.jpg" alt="Mirchi Bajji" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Mirchi Bajji</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 7, name: 'Mirchi Bajji'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="snacks" data-name="Onion Pakoda">
-        <img src="images/Onion-Pakoda.jpg" alt="Onion Pakoda" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="Onion-Pakoda.jpg" alt="Onion Pakoda" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Onion Pakoda</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 8, name: 'Onion Pakoda'}); selectCard(this)">Add to Cart</button>
       </div>
@@ -335,7 +335,7 @@
         </div>
       </div>
       <div class="relative group rounded-2xl overflow-hidden shadow-md bg-white hover:shadow-green-200 transition-all duration-300">
-        <img src="../images/three.jpeg" alt="Chilly Chicken" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
+        <img src="three.jpeg" alt="Chilly Chicken" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
         <div class="absolute top-3 right-3 bg-gradient-to-br from-green-400 to-green-600 text-white px-2 py-1 rounded-full text-xs font-bold shadow-md">HEALTHY</div>
         <div class="p-5 flex flex-col h-full">
           <h3 class="text-base sm:text-lg font-bold mb-2 text-gray-800 group-hover:text-green-600 transition-colors duration-300">Chilly Chicken</h3>
@@ -347,7 +347,7 @@
         </div>
       </div>
       <div class="relative group rounded-2xl overflow-hidden shadow-md bg-white hover:shadow-green-200 transition-all duration-300">
-        <img src="../images/download.jpeg" alt="Chicken Fried Biriyani" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
+        <img src="download.jpeg" alt="Chicken Fried Biriyani" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
         <div class="absolute top-3 right-3 bg-gradient-to-br from-blue-400 to-green-400 text-white px-2 py-1 rounded-full text-xs font-bold shadow-md">POPULAR</div>
         <div class="p-5 flex flex-col h-full">
           <h3 class="text-base sm:text-lg font-bold mb-2 text-gray-800 group-hover:text-green-600 transition-colors duration-300">Chicken Fried Biriyani</h3>
@@ -359,7 +359,7 @@
         </div>
       </div>
       <div class="relative group rounded-2xl overflow-hidden shadow-md bg-white hover:shadow-green-200 transition-all duration-300">
-        <img src="../images/kaju.jpeg" alt="Kaju Chicken Pakoda" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
+        <img src="kaju.jpeg" alt="Kaju Chicken Pakoda" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
         <div class="absolute top-3 right-3 bg-gradient-to-br from-pink-400 to-orange-400 text-white px-2 py-1 rounded-full text-xs font-bold shadow-md">FAMILY</div>
         <div class="p-5 flex flex-col h-full">
           <h3 class="text-base sm:text-lg font-bold mb-2 text-gray-800 group-hover:text-green-600 transition-colors duration-300">Kaju Chicken Pakoda</h3>
