--- a/index.html
+++ b/index.html
@@ -244,22 +244,22 @@
     </div>
     <div id="special-dishes-list" class="py-2 px-1">
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="special-combo" data-name="Suribabu Kodi Pulao">
-        <img src="../images/s5.webp" alt="Suribabu Kodi Pulao" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="s5.webp" alt="Suribabu Kodi Pulao" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Suribabu Kodi Pulao</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 12, name: 'Suribabu Kodi Pulao'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="special-combo" data-name="Non-Veg Special Combo">
-        <img src="images/special combo.jpg" alt="Non-Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="special combo.jpg" alt="Non-Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Non-Veg Special Combo</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 11, name: 'Non-Veg Special Combo'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="special-combo" data-name="Kodi Pulao Combo">
-        <img src="images/kodi palav.jpg" alt="Kodi Pulao Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="kodi palav.jpg" alt="Kodi Pulao Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Kodi Pulao Combo</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 9, name: 'Kodi Pulao Combo'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="special-combo" data-name="Veg Special Combo">
-        <img src="images/veg pala0.webp" alt="Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="veg pala0.webp" alt="Veg Special Combo" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Veg Special Combo</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 10, name: 'Veg Special Combo'}); selectCard(this)">Add to Cart</button>
       </div>
