--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <header class="bg-white shadow fixed w-full top-0 z-20 border-b border-gray-200">
     <div class="container mx-auto py-3 flex justify-between items-center">
       <div class="flex items-center space-x-2">
-        <a href="index.html"><img class="h-12 sm:h-14" src="../images/image(5).jpg" alt="FoodHub Logo"></a>
+        <a href="index.html"><img class="h-12 sm:h-14" src="image(5).jpg" alt="FoodHub Logo"></a>
       </div>
       <button id="menu-toggle" class="md:hidden text-gray-600 focus:outline-none">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -264,17 +264,17 @@
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 10, name: 'Veg Special Combo'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="starters" data-name="Paneer Tikka">
-        <img src="images/paneer tikka.jpg" alt="Paneer Tikka" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="paneer tikka.jpg" alt="Paneer Tikka" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Paneer Tikka</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 1, name: 'Paneer Tikka'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="starters" data-name="Chicken 65">
-        <img src="images/chc 65.jpg" alt="Chicken 65" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="chc 65.jpg" alt="Chicken 65" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Chicken 65</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 2, name: 'Chicken 65'}); selectCard(this)">Add to Cart</button>
       </div>
       <div class="bg-white rounded-2xl shadow-md p-5 text-center flex flex-col items-center overflow-hidden" data-portion="starters" data-name="Veg Manchurian">
-        <img src="images/veg manchuriya.jpeg" alt="Veg Manchurian" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
+        <img src="veg manchuriya.jpeg" alt="Veg Manchurian" class="rounded-lg shadow-md w-full h-36 object-cover mb-3 transition-transform duration-300 hover:scale-105">
         <h3 class="text-base sm:text-lg font-bold mb-2">Veg Manchurian</h3>
         <button class="bg-gradient-to-r from-green-400 to-green-600 text-black px-4 py-1.5 text-sm rounded-full hover:from-green-500 hover:to-green-700 shadow transition-all duration-300 mt-auto" onclick="addToCart({id: 3, name: 'Veg Manchurian'}); selectCard(this)">Add to Cart</button>
       </div>
@@ -323,7 +323,7 @@
     <h2 class="text-2xl sm:text-3xl font-extrabold text-center mb-10 text-gradient bg-gradient-to-r from-green-500 via-orange-400 to-pink-500 bg-clip-text text-transparent">Chef's Signature Picks</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
       <div class="relative group rounded-2xl overflow-hidden shadow-md bg-white hover:shadow-green-200 transition-all duration-300">
-        <img src="../images/four.jpeg" alt="Suribabu KodiPalav" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
+        <img src="four.jpeg" alt="Suribabu KodiPalav" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
         <div class="absolute top-3 right-3 bg-gradient-to-br from-orange-400 to-pink-500 text-white px-2 py-1 rounded-full text-xs font-bold shadow-md">NEW</div>
         <div class="p-5 flex flex-col h-full">
           <h3 class="text-base sm:text-lg font-bold mb-2 text-gray-800 group-hover:text-green-600 transition-colors duration-300">Suribabu KodiPalav</h3>
@@ -377,7 +377,7 @@
     <div class="absolute top-0 right-0 w-24 h-24 bg-green-200 rounded-full opacity-20 -z-10"></div>
     <div class="container mx-auto flex flex-col md:flex-row items-center">
       <div class="md:w-1/2 order-2 md:order-1 p-4">
-        <img src="../images/download2.jpeg" alt="Healthy Food" class="rounded-lg shadow-md w-full object-cover">
+        <img src="download2.jpeg" alt="Healthy Food" class="rounded-lg shadow-md w-full object-cover">
       </div>
       <div class="md:w-1/2 text-center md:text-left mb-8 md:mb-0 order-1 md:order-2">
         <h2 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-4">Healthy Food In A Healthier Life In The Future</h2>
