--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <a href="#special-dishes" class="inline-block bg-green-500 text-white px-4 sm:px-6 py-2 sm:py-3 text-base sm:text-lg rounded-full shadow-md hover:bg-green-600 transition-all duration-300">Order Now</a>
       </div>
       <div class="md:w-1/2 flex justify-center">
-        <img src="../images/suri (1).png" alt="Food Delivery" class="w-full max-w-sm rounded-full shadow-md transform transition-transform duration-500 hover:scale-95">
+        <img src="suri (1).png" alt="Food Delivery" class="w-full max-w-sm rounded-full shadow-md transform transition-transform duration-500 hover:scale-95">
       </div>
     </div>
   </section>
